# java-play-framework-server/app/controllers/TransformerApiController.java
@@ -1,5 +1,6 @@
 package controllers;
 
+import apimodels.ErrorMsg;
 import apimodels.GeneInfo;
 import apimodels.TransformerInfo;
 import apimodels.TransformerQuery;
@@ -22,7 +23,7 @@ import play.Configuration;
 
 import swagger.SwaggerUtils.ApiAction;
 
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaPlayFrameworkCodegen", date = "2019-09-09T21:40:14.444Z")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaPlayFrameworkCodegen", date = "2019-12-19T19:52:42.700Z")
 
 public class TransformerApiController extends Controller {
 
