# java-play-framework-server/app/controllers/TransformerApiControllerImp.java
@@ -1,5 +1,6 @@
 package controllers;
 
+import apimodels.ErrorMsg;
 import apimodels.GeneInfo;
 import apimodels.TransformerInfo;
 import apimodels.TransformerQuery;
@@ -10,7 +11,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.io.FileInputStream;
 import javax.validation.constraints.*;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaPlayFrameworkCodegen", date = "2019-09-09T21:40:14.444Z")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaPlayFrameworkCodegen", date = "2019-12-19T19:52:42.700Z")
 
 public class TransformerApiControllerImp implements TransformerApiControllerImpInterface {
     @Override
